fix: solved the problems of dark mode and light mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,21 +3,18 @@
 @tailwind utilities;
 
 
+:root {
+  --background: #ededed;
+  --foreground: #171717;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --background: #ededed;
-    --foreground: #171717;
-  }
-}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
